It will add fucntionality for eventListener

--- a/mad-libs.html
+++ b/mad-libs.html
@@ -36,6 +36,8 @@
     </div>
     <div>
       <button type="submit">Show me the story!</button>
+      <br />
+      <button type="button" class="hidden" id="reset">Reset</button>
     </div>
   </form>
   <div id="story" class="hidden">
